# CSE485PokerSolver

./: .gitignore  README.md  ReadMe  client.out  docker-compose.dev.yml  server.out
frontend/: Dockerfile.dev  nohup.out  package.json
frontend/src/: App.js  index.css
notebooks/: Abstractions.ipynb  CFRM.ipynb  Overview.ipynb
notebooks/.ipynb_checkpoints/: Abstractions-checkpoint.ipynb  CFRM-checkpoint.ipynb
poker_solver/: Cargo.toml  Dockerfile.dev  out.txt  tree.txt
poker_solver/benches/: solve_river.rs
poker_solver/client/: Cargo.toml  out
poker_solver/client/src/: lib.rs  main.rs
poker_solver/information_abstraction/: Cargo.toml  Untitled.ipynb
poker_solver/information_abstraction/.ipynb_checkpoints/: Cargo-checkpoint.toml
poker_solver/information_abstraction/src/: distance.rs  ehs.rs  histogram.rs  kmeans.rs  lib.rs  mpi_kmeans.rs  ochs.rs
poker_solver/server/: Cargo.toml  README.md
poker_solver/server/src/: agent.rs  game_handler.rs  handler.rs  lib.rs  main.rs  ws.rs
poker_solver/src/: action.rs  agents.rs  best_response.rs  betting_abstraction.rs  card.rs  card_abstraction.rs  codec.rs  combos.rs  constants.rs  ehs_reader.rs  event.rs  game_environment.rs  game_node.rs  infoset.rs  lib.rs  mccfr.rs  round.rs  solver.rs  sparse_and_dense.rs  state.rs  tree.rs  tree_builder.rs
poker_solver/tests/: solve_flop.rs  solve_river.rs  solve_turn.rs
scripts/: install_deps.sh  nohup.out  run_client_server.sh
src/: App.js
