[package]
name = "poker_solver"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_poker = { version = "0.1.8", features = ["indexer"] }
rand = { version = "0.7.3", features = [ "small_rng" ] }
crossbeam = "0.7.3"
colored = "2.0.0"
