[package]
name = "poker_solver"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
rustflags = ["-C", "target-cpu=native"]

[dependencies]
rust_poker = { version = "0.1.8", features = ["indexer"] }
rand = { version = "0.7.3", features = [ "small_rng" ] }
crossbeam = "0.7.3"
colored = "2.0.0"
bytes = "0.6.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.5.0", features = ["full"] }
tokio = { version = "0.3.0", features = ["full", "tracing"] }
futures = "0.3.0"
