[package]
name = "poker_solver"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "information_abstraction",
    "server",
    "client"
]

# [target.'cfg(any(windows, unix))']
# rustflags = ["-C target-cpu=native"]

[profile.release]
lto = true
codegen-units = 1
# Includes debug information in release builds. Necessary for profiling. Does not
# slow down the executable.
debug = true
opt-level = 3

[dependencies]
rust_poker = { version = "0.1.13", features = ["indexer"] }
rand = { version = "0.7.3", features = [ "small_rng" ] }
# concurrency
crossbeam = "0.7.3"
colored = "2.0.0"
# for handing asynchronous runtime and server
bytes = "0.6.0"
byteorder = "1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tokio-util = { version = "0.5.0", features = ["full"] }
tokio = { version = "0.3.0", features = ["full", "tracing"] }
futures = "0.3.0"
clap = "3.0.0-beta.2"
ndarray = { version = "0.13.1", features = ["rayon"] }
thiserror = "1.0.24"
