[package]
name = "client"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poker_solver = { path = ".." }
rand = { version = "0.7.3", features = [ "small_rng" ] }
websocket = "0.26.2"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
futures = { version = "0.1", optional = true }
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.2.0", features = ["macros", "sync", "rt-multi-thread"] }
clap = "3.0.0-beta.2" 
