[package]
name = "server"
version = "0.1.0"
authors = ["Kyle Murphy <kwmurph2@asu.edu>", "Salem Almarar <ssalmara@asu.edu>"]
edition = "2018"

[dependencies]
futures = "0.3.13"
serde = { version = "1.0.123", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.24"
tokio = { version = "1.2.0", features = ["macros", "sync", "rt-multi-thread"] }
tokio-stream = "0.1.3"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
warp = "0.3.0"
tracing = "0.1"
tracing-subscriber = "0.2"
bytes = "0.6.0"
clap = "3.0.0-beta.2"
ndarray = { version = "0.13.1", features = ["rayon"] }
poker_solver = { path = ".." }
client = { path = "../client" }